--- a/index.html
+++ b/index.html
@@ -1,329 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="Umair Farooqui" />
-
-  <title>Umair Farooqui</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
-    integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous" />
-
-  <link rel="icon" href="mufazmi.jpg" type="image/gif" sizes="16x16">
-
-  <!-- Google fonts for this template -->
-
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Poppins|Just+Another+Hand" rel="stylesheet" />
-
-  <!-- Custom styles for this template -->
-  <link href="style.css" rel="stylesheet" />
-
-  <!-- Additional Fonts -->
-  <link rel="stylesheet"
-    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
-</head>
-
-<body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">
-      <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile mb-3" src="mufazmi.jpg" alt="Profile Picture" />
-      </span>
-    </a>
-    <button class="navbar-toggler m-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-      <ul class="navbar-nav d-block">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="http://mufazmi.medium.com" target="_blank" rel="noopener">Blog</a>
-        </li>
-      </ul>
-
-      <div>
-        <ul class="list-inline list-social-icons icon-circle icon-zoom mt-5 mb-0">
-
-          <li class="list-inline-item">
-            <a href="https://www.google.com/search?q=Umair+Farooqui" target="_blank" rel="noopener">
-              <i class="fab fa-google"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/company/mufazmi/" target="_blank" rel="noopener">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.github.com/mufazmi" target="_blank" rel="noopener">
-              <i class="fab fa-github"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://stackoverflow.com/users/6715678/mufazmi" target="_blank" rel="noopener">
-              <i class="fab fa-stack-overflow"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/mufazmi/" target="_blank" rel="noopener">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://instagram.com/mufazmi" target="_blank" rel="noopener">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.google.com/search?q=mufazmi&stick=H4sIAAAAAAAAAOOwesRoyi3w8sc9YSmdSWtOXmNU4-IJSC0qzs8LTk0sSs4QEuNic80rySypFOKR4uLiSDE1KjHOzajiWcTKF5qbmFmk4JZYlJ9fWJoJAAXM5mhLAAAA" target="_blank" rel="noopener">
-              <i class="fab fa-google"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container-fluid p-0">
-    <section class="resume-section p-3 p-lg-5" id="about">
-      <div class="my-auto">
-        <p class="mobile-name">
-          <img class="mobile-img" src="mufazmi.jpg" alt="Profile Picture" />
-        </p>
-        <p class="mobile-name">Umair <span class="family-name">Farooqui</span></p>
-        <h1 class="mb-3 mt-5">
-          Umair
-          <span class="family-name">Farooqui</span>
-        </h1>
-        <p class="mobile-profession">
-          Full Stack Developer 👩‍💻 | Security Researcher 📖 | Bug Hunter🐞| Penetration Tester💻
-        </p>
-        <h4 class="mb-4">
-          Full Stack Developer 👩‍💻 | Security Researcher 📖 | Bug Hunter🐞| Penetration Tester💻
-        </h4>
-
-        <p class="mb-3">
-          Hey, I'm Umair Farooqui—a skilled Full Stack Developer currently working in the tech industry. With a passion
-          for
-          cybersecurity, I actively participate in vulnerability disclosure programs and have received numerous rewards
-          from
-          top public and private companies. My expertise lies in utilizing technologies like React.js, Express.js, and
-          Flutter.
-          As a Penetration Tester, I dedicate my days to coding, researching, and bug hunting to fortify digital
-          landscapes,
-          ensuring systems are resilient against potential threats. Let's navigate the digital realm together, making it
-          safer
-          and more secure! 🌐
-        </p>
-
-        <p>
-          I'm also passionate about staying up-to-date with the latest industry trends and technologies. My proficiency
-          extends
-          to front-end technologies like HTML, CSS, and JavaScript, as well as back-end technologies such as Node.js and
-          MongoDB.
-          I believe in continuous learning and enjoy exploring new challenges that push the boundaries of my skills.
-          Collaborative
-          and detail-oriented, I thrive in dynamic environments where innovation is key. Let's connect and explore the
-          endless
-          possibilities of technology together!
-        </p>
-
-        <p class="mb-5 mt-5">
-          <i class="fas fa-user-tag"></i>
-          #FullStackDeveloper #Cybersecurity #BugHunter #PenetrationTester #ReactJS #ExpressJS #Flutter
-          #ContinuousLearning #Innovation #TechEnthusiast #HTML #CSS #JavaScript #NodeJS #MongoDB
-          #TechInnovator #DigitalSecurity #CodeLife #Collaboration #Mufazmi
-        </p>
-
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5" id="skills">
-      <h2 class="mb-5">&lt; Skills &gt;</h2>
-      <div class="my-auto">
-        <ul class="list-inline list-icons mb-4">
-          <li class="list-inline-item">
-            <i class="devicon-html5-plain" title="HTML5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-css3-plain" title="CSS3"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-javascript-plain" title="JavaScript"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-jquery-plain" title="jQuery"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-csharp-plain" title="CSharp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-bootstrap-plain" title="Bootstrap 4"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-wordpress-plain" title="Wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-visualstudio-plain" title="Visual Studio"></i>
-          </li>
-
-          <li class="list-inline-item">
-            <i class="devicon-bitbucket-plain" title="Bitbucket"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-github-plain" title="Github"></i>
-          </li>
-        </ul>
-
-        <div id="skill-bars">
-
-          <p class="text-left">Nodejs - 99%</p>
-
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"
-              style="width: 99%"></div>
-          </div>
-
-          <p class="text-left">ExpressJs - 99%</p>
-
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"
-              style="width: 98%"></div>
-          </div>
-
-          <p class="text-left">React js - 97%</p>
-
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"
-              style="width: 97%"></div>
-          </div>
-          <p class="text-left">Flutter - 94%</p>
-
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="94" aria-valuemin="0" aria-valuemax="100"
-              style="width: 94%"></div>
-          </div>
-          <p class="text-left">JavaScript - 86%</p>
-
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"
-              style="width: 86%"></div>
-          </div>
-          <p class="text-left">Typescript 4 - 90%</p>
-
-          <div class="progress mb-5" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-              style="width: 90%"></div>
-          </div>
-
-          <p class="text-left">Python - 95%</p>
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
-              style="width: 95%"></div>
-          </div>
-
-          <p class="text-left">Java - 60%</p>
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"
-              style="width: 92%"></div>
-          </div>
-
-          <p class="text-left">Django - 88%</p>
-          <div class="progress mb-5" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"
-              style="width: 88%"></div>
-          </div>
-
-
-          <p class="text-left">Penetration Testing - 86%</p>
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"
-              style="width: 86%"></div>
-          </div>
-
-          <p class="text-left">Bug Hunting - 86%</p>
-          <div class="progress mb-2" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"
-              style="width: 86%"></div>
-          </div>
-        </div>
-      </div>
-
-      <p class="pt-3">
-        <i class="fas fa-user-tag"></i> #Organization
-        #TimeManagement #Communication
-      </p>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5" id="contact">
-      <div class="my-auto">
-        <h2 class="mb-3">&lt; Contact &gt;</h2>
-
-        <ul class="fa-ul mb-4 ml-0">
-          <li id="mail-address">
-            <a href="info.umairfarooqui@gmail.com">
-              <i class="fas fa-envelope-open mr-2"></i>info.umairfarooqui@gmail.com</a>
-          </li>
-          <li><i class="fas fa-mobile-alt mr-2"></i>+91 9867503256</li>
-          <li><i class="fas fa-map-marker-alt mr-2"></i>Mumbai, India</li>
-        </ul>
-
-        <p>
-          ...or leave your message below and I will be back to you as soon as
-          possible.
-        </p>
-
-        <form class="contact-form" method="POST" action="https://formspree.io/info.umairfarooqui@gmail.com">
-          <div class="form-group">
-            <input type="name" class="form-control" placeholder="Name" name="name" required />
-          </div>
-          <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" name="name" required />
-          </div>
-
-          <div class="form-group">
-            <textarea class="form-control" type="text" placeholder="Message" rows="7" name="name" required></textarea>
-          </div>
-
-          <button type="submit" class="btn btn-submit">Submit</button>
-        </form>
-      </div>
-    </section>
-  </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
-
-  <!-- font-awesome script -->
-
-  <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
-    integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+Take Over By Umair Farooqui
