--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Take Over By Umair Farooqui
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="mufazmi.jpg" type="image/gif" sizes="16x16">
+
+    <title>Umair Farooqui</title>
+    <title>Document</title>
+</head>
+
+<body>
+    Takeover By <a
+        href="https://mufazmi.medium.com/" target="_blank" style="text-decoration: none; color: inherit;">Umair
+        Farooqui</a>
+</body>
+
+</html>
