--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="mufazmi.jpg" type="image/gif" sizes="16x16">
-
-    <title>Umair Farooqui</title>
-    <title>Document</title>
+    <title>Subdomain Takeover - Umair Farooqui</title>
 </head>
 
 <body>
-    Takeover By <a
-        href="https://mufazmi.medium.com/" target="_blank" style="text-decoration: none; color: inherit;">Umair
-        Farooqui</a>
+    <h1>Subdomain Takeover by <a href="https://mufazmi.medium.com/" target="_blank" style="text-decoration: none; color: inherit;">Umair Farooqui</a></h1>
+    <p>This subdomain has been successfully taken over as part of a proof of concept (PoC) to demonstrate the security vulnerability of subdomain takeover.</p>
+    <p>If you are the owner of this domain and wish to reclaim it, please contact me at: <a href="mailto:info.umairfarooqui@gmail.com" style="text-decoration: none; color: inherit;">info.umairfarooqui@gmail.com</a></p>
 </body>
 
 </html>
